# PR-Assistant

./: .env.example  .gitignore  .nojekyll  Dockerfile  README.md  cancel.html  docker-compose.yml  index.html  pyproject.toml  railway.toml  success.html  test_gemini_cli.py
.github/workflows/: pr-assistant.yml
autoreadme/: __init__.py  analyzer.py  cli.py  differ.py  generator.py  git_utils.py
autoreadme/github_app/: __init__.py  cancel.html  database.py  github_client.py  pr_handler.py  success.html  webhook_server.py
autoreadme/languages/: __init__.py  base.py  go.py  java.py  javascript.py  python.py  registry.py  ruby.py  rust.py
autoreadme/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
autoreadme/templates/: README_template.md
tests/: conftest.py  test_analyzer.py  test_cli.py  test_differ.py  test_integration.py  test_languages.py  test_llm.py
